# nusystematics-old

./: CMakeLists.txt  README.md
cmake/Modules/: nusystematicsDependencies.cmake
cmake/Templates/: nusystematicsConfig.cmake.in  setup.nusystematics.sh.in
fcl/: SkeleWeighter.ToolConfig.fcl
nusystematics/app/: DumpConfiguredTweaksNuSyst.cc
nusystematics/artless/: CMakeLists.txt  GENIESetup.cmake  GenerateSystProviderConfigNuSyst.cc  TestPolyResponse5.cc  response_helper.hh  setup.sh.in
nusystematics/artless/cmake/: FindGENIE3.cmake  nusystematicsConfig.cmake  nusystematicsConfig.cmake.in  nusystematicsDependencies.cmake
nusystematics/fcl/: DUNETDRv1.CVOnly.ParamHeaders.fcl  DUNETDRv1.ParamHeaders.fcl  DUNETDRvfinal.CVOnly.ParamHeaders.fcl
nusystematics/interface/: IGENIESystProvider_tool.hh
nusystematics/systproviders/: GENIEReWeightEngineConfig.cc  GENIEReWeight_tool.cc  MINERvAE2p2h_tool.hh  MKSinglePiTemplate_tool.hh
nusystematics/utility/: GENIEUtils.hh
src/nusystematics/: CMakeLists.txt
src/nusystematics/app/: CMakeLists.txt  DumpConfiguredTweaksNuSyst.cxx  GenerateSystProviderConfigNuSyst.cxx
src/nusystematics/interface/: CMakeLists.txt  IGENIESystProvider_tool.hh
src/nusystematics/responsecalculators/: BeRPA.hh  C12ToAr40_2p2hScaling.hh  CMakeLists.txt  EnuBinnedTemplateResponseCalculator.hh  FSILikeEAvailSmearing.hh  MINERvA2p2hEnergyDependenceScale.hh  MINERvA2p2hq0q3.hh  MINERvARPAq0q3_ReWeight.hh  MINERvAq0q3Weighting_data.hh  MKSinglePiTemplate_ReWeight.hh  SPPLowQ2Suppression.hh  TemplateResponseCalculatorBase.hh  nuenuebar_xsec_ratio.hh  nuenumu_xsec_ratio.hh
src/nusystematics/systproviders/: BeRPAWeight_tool.cc  BeRPAWeight_tool.hh  CMakeLists.txt  EbLepMomShift_tool.cc  EbLepMomShift_tool.hh  FSILikeEAvailSmearing_tool.cc  FSILikeEAvailSmearing_tool.hh  GENIEReWeightEngineConfig.cc  GENIEReWeightEngineConfig.hh  GENIEReWeightParamConfig.cc  GENIEReWeightParamConfig.hh  GENIEReWeight_tool.cc  GENIEReWeight_tool.hh  GENIEResponseParameterAssociation.hh  MINERvAE2p2h_tool.cc  MINERvAE2p2h_tool.hh  MINERvAq0q3Weighting_tool.cc  MINERvAq0q3Weighting_tool.hh  MKSinglePiTemplate_tool.cc  MKSinglePiTemplate_tool.hh  MiscInteractionSysts_tool.cc  MiscInteractionSysts_tool.hh  NOvAStyleNonResPionNorm_tool.cc  NOvAStyleNonResPionNorm_tool.hh  SkeleWeighter_tool.cc  SkeleWeighter_tool.hh
src/nusystematics/utility/: CMakeLists.txt  GENIEUtils.hh  enumclass2int.hh  exceptions.hh  make_instance.hh  response_helper.hh  simbUtility.hh
